:mute: dempet logger fra jvm, ktor, og netty