@@ -4,10 +4,9 @@ WORKDIR /app
 
 EXPOSE 8080
 
-ENV JAVA_OPTS="-Dlogback.configurationFile=logback.xml"
 ENV TZ="Europe/Oslo"
-ENV JAVA_OPTS='-XX:MaxRAMPercentage=90'
+ENV JAVA_OPTS='-XX:MaxRAMPercentage=90 -Dorg.slf4j.simpleLogger.log.io.ktor=error --enable-native-access=ALL-UNNAMED --add-opens java.base/jdk.internal.misc=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED -Dio.netty.tryReflectionSetAccessible=true --sun-misc-unsafe-memory-access=allow'
 
 COPY build/libs/*.jar ./
 
-CMD ["-jar","app.jar"]
+CMD ["-jar", "app.jar"]
